# UserLogger

./: .gitignore  CMakeLists.txt  README.md  TOKEN  main.cpp
files/: passwd.txt
include/: log_session.h  storage.h  user.h  utils.h
sources/: log_session.cpp  storage.cpp  user.cpp  utils.cpp
tests/: google_tests.cpp  test_storage.cpp
